adding data-algo project

--- a/index.html
+++ b/index.html
@@ -326,6 +326,54 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
+                src="./assets/jpeg/data-algo.jpeg"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+                />
+                <img
+                src="./assets/jpeg/data-algo-2.jpeg"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+                />
+              </div>
+              
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Data Algo</h3>
+              <p class="projects__row-content-desc">
+                An application that visualizes core programming topics as <strong>Data Structures and Algorithms</strong>.
+                I was in the development team responsible for c++ code complication and answer verfication of excercises. <br>
+                This program features:
+                <ul class="projects__row-content-desc">
+                  <li><strong>-</strong>Data Structure visualizations as:
+                    <ol>
+                      <li>1. Queue/Stack</li>
+                      <li>2. Binary tree</li>
+                      <li>3. Graph</li>
+                    </ol>
+                  </li>
+                    <li><strong>-</strong>Algorithms visualizations as:
+                      <ol>
+                        <li>1. Binary Search</li>
+                        <li>2. Insersion Sort</li>
+                        <li>3. Sieve</li>
+                      </ol>
+                    </li>
+                    <li><strong>-</strong>Practice problems for both topics with <strong>compiling c++ code.</strong></li>
+                </ul>
+              </p>
+              <a
+                href="https://drive.google.com/file/d/1Q1cS_sinOWkXRgyxOgkzSeDAzeN7KmQB/view?usp=drive_link"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Watch</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
                 src="./assets/jpeg/giza-interview-game.jpeg"
                 alt="Software Screenshot"
                 class="projects__row-img"
